--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ a {
     padding: 1.5rem 1.25rem;
 }
 
-.new h1 {
+.new h2 {
     color: var(--color-soft-orange);
     font-size: 2.5rem;
     margin-bottom: 1rem;
@@ -161,8 +161,9 @@ hr {
     gap: .75rem;
 }
 
-.text h1 {
+.text h2 {
     color: var(--color-grayish-blue);
+    font-size: 2rem;
 }
 
 .text a {
@@ -184,6 +185,7 @@ hr {
 
     header {
         z-index: -1;
+        margin-top: 1rem;
     }
 
     .nav {
@@ -192,13 +194,21 @@ hr {
 
     .menu-open {
         display: block;
+        transition: 0.5s;
+
     }
 
-    .menu-close, .transparent-menu, .mobile-nav {
+    .menu-close, .mobile-nav {
         position: absolute;
     }
 
+    .menu-closed {
+        transform: translateX(100%);
+        transition-delay: 0.5s;
+    }
+
     .transparent-menu {
+        position: fixed;
         display: none;
         top: 0;
         left: 0;
@@ -206,11 +216,14 @@ hr {
         height: 100%;
         background-color: rgba(8, 8, 8, 0.503);
         z-index: 1;
+        transition: 0.5s;
     }
 
     .menu-close {
-        top: 5rem;
+        top: 1rem;
         right: 1rem;
+        transition: 0.5s;
+
     }
 
     .mobile-nav {
@@ -227,14 +240,27 @@ hr {
     }
 
     .solid-menu {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         height: 100%;
         width: 70%;
         background-color: var(--color-off-white);
+        animation: slide-in-right 500ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        -webkit-animation: slide-in-right 500ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
    
+    @keyframes slide-in-right {
+        0% {
+          transform: translateX(1000px);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+
     .hero-section, .bright-future, .growth {
         grid-template-columns: 1fr;
     }
